# timeytime

./: .gitignore  Dockerfile  manage.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: build.yml
backend/: isto.py  models.py  settings.py  urls.py  util.py  views.py  wsgi.py
backend/migrations/: 0001_initial.py  0002_rename_end_entry_end_time_and_more.py  0003_client_timezone.py  0004_alter_entry_start_time.py  0005_entry_deleted.py  0006_entry_editedfrom_entry_editedto.py
backend/templatetags/: tags.py
backend/views/: __init__.py  auth.py  clients.py  entries.py  index.py  reports.py  timers.py
static/: main.css  manifest.json
static/css/: base.css  button.css  clients.css  colors.css  header.css  index.css  main.css  reports.css
static/js/: clients.js  index.js  util.js
templates/: base.html  clients.html  index.auth.html  index.html  reports.html
templates/components/: header.html
